[package]
name = "secubox-lambda"
version = "1.0.0"
authors = ["Jeffrey Bolle <jeffreybolle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws_lambda_events = "^0.3.1"
rusoto_dynamodb = "0.45.0"
rusoto_core = "0.45.0"
tokio = {version = "0.2.22", features=["full"]}
base64 = "0.13.0"
thiserror = "1.0.22"
sha3 = "0.9.1"
hex = "0.4.2"
bytes = "0.5"