[package]
name = "secubox-lambda"
version = "1.0.2"
authors = ["Jeffrey Bolle <jeffreybolle@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.11.1"
hyper-tls = { version = "0.5.0", features = ["vendored"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
aws_lambda_events = "0.15.0"
rusoto_dynamodb = "0.48.0"
rusoto_core = "0.48.0"
tokio = {version = "1.37.0", features=["full"]}
base64 = "0.22.0"
thiserror = "1.0.58"
sha3 = "0.10.8"
hex = "0.4.3"
bytes = "1.6.0"